--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Offscreen to canvas2d render</title>
-  <!-- <script src="./js/virtual-webgl2.js"></script> -->
+  <title>mock flutter canvas use the texture from three.js</title>
 </head>
 <body>
-  <!-- Include Three.js library -->
-  <script type="module" src="js/main.js"></script>
-  <!-- Create a container to hold the 3D rendering -->
-  <div>threejs origin canvas container</div>
-  <div id="container" style="width: 300px; height: 300px; display: flex; align-items: start;">
-    <!-- <canvas id="singleton-canvas" style="width: 300px; height: 300px; background-color: black;"></canvas> -->
+  <script type="module" src="js/webgl-to-webgl-canvas.js"></script>
+  <div>three js webgl2 canvas</div>
+  <div id="threejs-container"></div>
   </div>
+  <div> mock flutter canvas</div>
+  <div id="mock-flutter-canvaskit-container">
 
-  <!-- <div id="copied-canvas-container" style="width: 300px; height: 300px;">
-    <div>copied canvas</div>
-    <canvas id="copied-canvas" style="width: 300px; height: 300px; background-color: black;"></canvas>
-  </div> -->
-
-
+  </div>
 </body>
 </html>
